# squigwire

./: .clang-format  .clangd  README.md  main.c  meson.build
include/: cli.h  config.h  daemon.h  fs.h  global.h  peq.h  state.h  util.h
scripts/: squigwire-route.sh
src/: cli.c  config.c  daemon.c  fs.c  main.c  peq.c  state.c  util.c
systemd/: squigwire.conf.example  squigwire.env.example  squigwire.service.in
